CMS error disappeared ... probably Chrome ... CMS adjustments to dropdown menus which now collapse to the correct state

--- a/dynamicNAV/css/bootstrap.css
+++ b/dynamicNAV/css/bootstrap.css
@@ -1591,9 +1591,9 @@ pre code {
   margin-left: auto;
 }
 @media (min-width: 768px) {
-  .container {
+  /*.container {
     width: 750px;
-  }
+  }*/
  
 }
 @media (min-width: 992px) {
@@ -4338,7 +4338,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   padding-bottom: 10px;
   line-height: 20px;
 }
-@media (max-width: 767px) {
+@media (max-width: 991px) {
   .navbar-nav .open .dropdown-menu {
     position: static;
     float: none;
@@ -4557,7 +4557,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   color: #555;
   background-color: #e7e7e7;
 }
-@media (max-width: 767px) {
+@media (max-width: 991px) {
   .navbar-default .navbar-nav .open .dropdown-menu > li > a {
     color: #777;
   }
